--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@mathieustan/vue-datepicker": "^0.2.11",
     "@nuxt/ui": "^2.16.0",
+    "@vuepic/vue-datepicker": "^8.7.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
